[gd_scene load_steps=39 format=3 uid="uid://e4gly0v4gt8h"]

[ext_resource type="Script" path="res://Main Menu/Menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ced3bov6f1ss2" path="res://UI/TitleArt.png" id="2"]
[ext_resource type="PackedScene" uid="uid://d11ar6ikff8dt" path="res://Levels/Campus.tscn" id="2_cs1kc"]
[ext_resource type="ArrayMesh" uid="uid://d2n6ufchu4d8k" path="res://Vox/tree.vox" id="3_ssptq"]
[ext_resource type="ArrayMesh" uid="uid://bfxo6wvf6nggx" path="res://Vox/menu_play.vox" id="4_ficvf"]
[ext_resource type="ArrayMesh" uid="uid://dsdfknk26nk36" path="res://Vox/menu_quit.vox" id="5_138a7"]
[ext_resource type="ArrayMesh" uid="uid://ddtp323r4duc6" path="res://Vox/6.vox" id="5_kqciv"]
[ext_resource type="ArrayMesh" uid="uid://ds0eweg8jphs4" path="res://Vox/2.vox" id="6_8prxf"]
[ext_resource type="PackedScene" uid="uid://kjstdntlyraj" path="res://SceneObjects/Tree.tscn" id="7"]
[ext_resource type="ArrayMesh" uid="uid://08hi4ibybgpw" path="res://Vox/starship.vox" id="7_b5ut2"]
[ext_resource type="ArrayMesh" uid="uid://bjnnics3h73xk" path="res://Vox/3.vox" id="7_n2i22"]
[ext_resource type="ArrayMesh" uid="uid://cnreo6jogxxnd" path="res://Vox/5.vox" id="8_j2kck"]
[ext_resource type="ArrayMesh" uid="uid://485h88o13ng5" path="res://Vox/7.vox" id="9_5gsc5"]
[ext_resource type="ArrayMesh" uid="uid://ckagupus6clnt" path="res://Vox/rock.vox" id="12_2ryw2"]
[ext_resource type="Material" uid="uid://2m6wyih7rwrg" path="res://Shaders/Clouds2D/CloudsVisible.tres" id="15"]
[ext_resource type="Texture2D" uid="uid://cn486gdo2uadr" path="res://QuadGround.png" id="15_exlpm"]
[ext_resource type="PackedScene" uid="uid://bcvbxarnx5ju7" path="res://SceneObjects/Grass.tscn" id="17"]
[ext_resource type="Texture2D" uid="uid://b5ace4fwd2ll3" path="res://Particles/particles-single.png" id="20"]

[sub_resource type="Sky" id="9"]

[sub_resource type="Environment" id="10"]
background_mode = 2
sky = SubResource("9")
sky_custom_fov = 87.1
ambient_light_color = Color(0.886275, 0.701961, 0.34902, 1)
ambient_light_sky_contribution = 0.5
ambient_light_energy = 1.5
tonemap_mode = 2
ssao_intensity = 8.25
fog_enabled = true
adjustment_enabled = true

[sub_resource type="QuadMesh" id="11"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pkpjs"]
size = Vector3(0.308111, 0.065, 0.0975461)

[sub_resource type="BoxShape3D" id="BoxShape3D_b60cc"]
size = Vector3(0.25798, 0.065, 0.0871252)

[sub_resource type="Animation" id="18"]
resource_name = "PlayDeselect"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Play Button/Play Mesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.09, 0.3, 0.09), Vector3(0.09, 0.09, 0.09)]
}

[sub_resource type="Animation" id="16"]
resource_name = "PlaySelect"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Play Button/Play Mesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.09, 0.09, 0.09), Vector3(0.09, 0.3, 0.09)]
}

[sub_resource type="Animation" id="19"]
resource_name = "QuitDeselect"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Quit Button/Quit Mesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.09, 0.3, 0.09), Vector3(0.09, 0.09, 0.09)]
}

[sub_resource type="Animation" id="20"]
resource_name = "QuitSelect"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Quit Button/Quit Mesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.09, 0.09, 0.09), Vector3(0.09, 0.3, 0.09)]
}

[sub_resource type="Animation" id="17"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Play Button/Play Mesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.09, 0.09, 0.09)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Quit Button/Quit Mesh:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.09, 0.09, 0.09)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ScreenFade:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.984314, 1, 0.870588, 0)]
}

[sub_resource type="Animation" id="21"]
resource_name = "Transition"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreenFade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.984314, 1, 0.870588, 0), Color(1, 0.984314, 0.94902, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"changeScene"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nyc4h"]
_data = {
"PlayDeselect": SubResource("18"),
"PlaySelect": SubResource("16"),
"QuitDeselect": SubResource("19"),
"QuitSelect": SubResource("20"),
"RESET": SubResource("17"),
"Transition": SubResource("21")
}

[sub_resource type="StandardMaterial3D" id="22"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0.894118, 0.780392, 1)
albedo_texture = ExtResource("20")
use_point_size = true
point_size = 10.0

[sub_resource type="PointMesh" id="23"]
material = SubResource("22")

[sub_resource type="Curve" id="24"]
_data = [Vector2(0, 0.609091), 0.0, -6.77081, 0, 0, Vector2(0.502809, 1), 0.0, 0.0, 0, 0, Vector2(0.994382, 0.427273), 4.28818, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="25"]
offsets = PackedFloat32Array(0, 0.282282, 0.6997, 0.993994)
colors = PackedColorArray(0.964706, 0.839216, 0.643137, 0, 0.964706, 0.835294, 0.631373, 1, 0.949601, 0.781326, 0.458392, 0.994444, 0.94902, 0.776471, 0.447059, 0)

[sub_resource type="BoxShape3D" id="12"]
size = Vector3(0.08, 0.2, 0.08)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ls3po"]
albedo_texture = ExtResource("15_exlpm")
texture_filter = 4

[sub_resource type="QuadMesh" id="6"]

[sub_resource type="BoxShape3D" id="8"]
size = Vector3(10, 1, 10)

[node name="Menu" type="Node3D"]
script = ExtResource("1")
starting_level = ExtResource("2_cs1kc")

[node name="TitleArt" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 2
offset_left = -2.0
offset_top = 6.0
offset_right = 298.0
offset_bottom = 106.0
texture = ExtResource("2")

[node name="ScreenFade" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 270.0
mouse_filter = 2
color = Color(0.984314, 1, 0.870588, 0)

[node name="Post Processing" type="WorldEnvironment" parent="."]
environment = SubResource("10")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.921505, 0.235161, -0.309075, 0.0946882, 0.635775, 0.766044, 0.376646, -0.73518, 0.563603, 0, 3.87753, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.595576, -0.132136, 0.792357, 0.00458189, 0.986921, 0.161139, -0.803286, -0.0923399, 0.588392, 0.171, 0.392, -3.16)
current = true
fov = 63.5

[node name="CloudsShadow" type="MeshInstance3D" parent="."]
transform = Transform3D(20, 0, 0, 0, -8.74228e-07, 1, 0, -20, -4.37114e-08, -3.17895, 1.85508, -4.88032)
material_override = ExtResource("15")
cast_shadow = 3
mesh = SubResource("11")

[node name="Clouds2" type="MeshInstance3D" parent="."]
transform = Transform3D(-8.74228e-07, -20, 4.37114e-08, 0, -8.74228e-07, -1, 20, -8.74228e-07, 1.91069e-15, -2.09917, 1.85508, -6.27089)
material_override = ExtResource("15")
cast_shadow = 0
mesh = SubResource("11")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(0.658994, 0.692106, 0.294476, -0.365132, -0.047912, 0.929722, 0.657575, -0.720204, 0.221137, 0.0327163, 0.576408, -3.1357)
light_color = Color(0.596078, 0.760784, 0.956863, 1)
light_energy = 2.323
shadow_enabled = true
shadow_bias = 0.0
shadow_reverse_cull_face = true
spot_range = 13.6
spot_angle = 35.53
spot_angle_attenuation = 0.840896

[node name="Play Button" type="Area3D" parent="."]
transform = Transform3D(0.587517, 0.464145, 0.662868, 1.70939e-08, 0.819152, -0.573576, -0.809212, 0.336985, 0.481266, -0.403, 0.026, -3.255)

[node name="Play Mesh" type="MeshInstance3D" parent="Play Button"]
transform = Transform3D(0.09, 0, 0, 0, 0.09, 0, 0, 0, 0.09, 0, 0, 0)
mesh = ExtResource("4_ficvf")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Play Button"]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, 2.98023e-08, 8.9407e-08, 1, 0, -2.38419e-07, -0.00471866)
shape = SubResource("BoxShape3D_pkpjs")

[node name="Quit Button" type="Area3D" parent="."]
transform = Transform3D(0.585906, 0.464814, 0.663824, 0, 0.819152, -0.573577, -0.810379, 0.336062, 0.479946, -0.169, 0.03, -3.591)

[node name="Quit Mesh" type="MeshInstance3D" parent="Quit Button"]
transform = Transform3D(0.09, 0, 0, 0, 0.09, 0, 0, 0, 0.09, 0, 0, 0)
mesh = ExtResource("5_138a7")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Quit Button"]
transform = Transform3D(1, 2.08616e-07, 0, 0, 1, 0, -2.98023e-08, -2.68221e-07, 1, -0.00522161, -4.76837e-07, 0.00374591)
shape = SubResource("BoxShape3D_b60cc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nyc4h")
}

[node name="CPUParticles3D" type="CPUParticles3D" parent="."]
transform = Transform3D(0.0994546, 0, 0.0104303, 0, 0.1, 0, -0.0104303, 0, 0.0994546, -1.53796, -0.0185671, -4.34068)
amount = 200
lifetime = 7.29
preprocess = 2.0
mesh = SubResource("23")
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
scale_amount_curve = SubResource("24")
color_ramp = SubResource("25")

[node name="World" type="Node3D" parent="."]

[node name="Rocks" type="MeshInstance3D" parent="World"]
transform = Transform3D(0.00271191, 0, 0.0999632, 0, 0.1, 0, -0.0999632, 0, 0.00271191, -3.755, -0.0578003, -3.913)
mesh = ExtResource("12_2ryw2")
skeleton = NodePath("../..")

[node name="Rocks2" type="MeshInstance3D" parent="World/Rocks"]
transform = Transform3D(-0.105919, 0, 0.69194, 0, 0.7, 0, -0.69194, 0, -0.105919, 18.0084, 0, 0.940132)
mesh = ExtResource("12_2ryw2")
skeleton = NodePath("../../..")

[node name="Rocks3" type="MeshInstance3D" parent="World/Rocks"]
transform = Transform3D(0.498384, 0, -0.0401866, 0, 0.5, 0, 0.0401866, 0, 0.498384, -1.66977, 0.303303, 27.2588)
mesh = ExtResource("12_2ryw2")
skeleton = NodePath("../../..")

[node name="Rocks4" type="MeshInstance3D" parent="World/Rocks"]
transform = Transform3D(0.131236, 0, -0.991351, 0, 1, 0, 0.991351, 0, 0.131236, -11.9763, 0, 17.2655)
mesh = ExtResource("12_2ryw2")
skeleton = NodePath("../../..")

[node name="Grass3" type="Node3D" parent="World"]
transform = Transform3D(-4.37114e-08, -3.82137e-15, 1, -8.74228e-08, 1, 0, 1, 8.74228e-08, 4.37114e-08, 0.817866, -0.00050734, -5.85677)

[node name="Grass0" parent="World/Grass3" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02881, 0, -1.43178)

[node name="Grass1" parent="World/Grass3" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.96539, 0, -1.43178)

[node name="Grass2" parent="World/Grass3" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.57696, 0, -2.64354)

[node name="Grass90" parent="World/Grass3" instance=ExtResource("17")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.141219, 0, -1.43231)

[node name="Grass91" parent="World/Grass3" instance=ExtResource("17")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.141219, 0, -2.52902)

[node name="Grass92" parent="World/Grass3" instance=ExtResource("17")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.54704, 0, -4.08305)

[node name="Grass180" parent="World/Grass3" instance=ExtResource("17")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.633319, 0, -1.7928)

[node name="Grass181" parent="World/Grass3" instance=ExtResource("17")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.872354, 0, -3.11562)

[node name="Grass270" parent="World/Grass3" instance=ExtResource("17")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.556493, 0, -2.26373)

[node name="Grass271" parent="World/Grass3" instance=ExtResource("17")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -1.56106, 0, -1.67641)

[node name="Grass2" type="Node3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, -1, -2.63414, -0.00050734, -3.82587)

[node name="Grass0" parent="World/Grass2" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02881, 0, -1.43178)

[node name="Grass1" parent="World/Grass2" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.96539, 0, -1.43178)

[node name="Grass2" parent="World/Grass2" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.57696, 0, -2.64354)

[node name="Grass90" parent="World/Grass2" instance=ExtResource("17")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.141219, 0, -1.43231)

[node name="Grass91" parent="World/Grass2" instance=ExtResource("17")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.141219, 0, -2.52902)

[node name="Grass92" parent="World/Grass2" instance=ExtResource("17")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.54704, 0, -4.08305)

[node name="Grass180" parent="World/Grass2" instance=ExtResource("17")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.633319, 0, -1.7928)

[node name="Grass181" parent="World/Grass2" instance=ExtResource("17")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.872354, 0, -3.11562)

[node name="Grass270" parent="World/Grass2" instance=ExtResource("17")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.556493, 0, -2.26373)

[node name="Grass271" parent="World/Grass2" instance=ExtResource("17")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -1.56106, 0, -1.67641)

[node name="Grass" type="Node3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.63414, -0.00050734, -2.44516)

[node name="Grass0" parent="World/Grass" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02881, 0, -1.43178)

[node name="Grass1" parent="World/Grass" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.96539, 0, -1.43178)

[node name="Grass2" parent="World/Grass" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.57696, 0, -2.64354)

[node name="Grass90" parent="World/Grass" instance=ExtResource("17")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.141219, 0, -1.43231)

[node name="Grass91" parent="World/Grass" instance=ExtResource("17")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.141219, 0, -2.52902)

[node name="Grass92" parent="World/Grass" instance=ExtResource("17")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.54704, 0, -4.08305)

[node name="Grass180" parent="World/Grass" instance=ExtResource("17")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.633319, 0, -1.7928)

[node name="Grass181" parent="World/Grass" instance=ExtResource("17")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.872354, 0, -3.11562)

[node name="Grass270" parent="World/Grass" instance=ExtResource("17")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.556493, 0, -2.26373)

[node name="Grass271" parent="World/Grass" instance=ExtResource("17")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -1.56106, 0, -1.67641)

[node name="Starship" type="Node3D" parent="World"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.08, 0, -3.93)

[node name="starship" type="MeshInstance3D" parent="World/Starship"]
mesh = ExtResource("7_b5ut2")

[node name="Starship2" type="Node3D" parent="World"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.471, 0, -3.702)

[node name="starship" type="MeshInstance3D" parent="World/Starship2"]
mesh = ExtResource("7_b5ut2")

[node name="Buildings" type="MeshInstance3D" parent="World"]
transform = Transform3D(0.026473, 0, 0.499299, 0, 0.5, 0, -0.499299, 0, 0.026473, -8.31034, -0.0515516, -3.67033)
mesh = ExtResource("9_5gsc5")
skeleton = NodePath("../..")

[node name="6" type="MeshInstance3D" parent="World/Buildings"]
transform = Transform3D(0.00137879, 0, -0.999999, 0, 1, 0, 0.999999, 0, 0.00137879, -2.91516, 0.00291689, 0.177526)
mesh = ExtResource("5_kqciv")
skeleton = NodePath("../../..")

[node name="2" type="MeshInstance3D" parent="World/Buildings"]
transform = Transform3D(0.052946, 0, -1.99719, 0, 1, 0, 0.998597, 0, 0.105892, 13.9393, -0.0274308, -0.120792)
mesh = ExtResource("6_8prxf")
skeleton = NodePath("../../..")

[node name="3" type="MeshInstance3D" parent="World/Buildings"]
transform = Transform3D(0.46546, 0, -0.885069, 0, 1, 0, 0.885069, 0, 0.46546, 20.5515, -0.00578061, 2.6102)
mesh = ExtResource("7_n2i22")
skeleton = NodePath("../../..")

[node name="5" type="MeshInstance3D" parent="World/Buildings"]
transform = Transform3D(0.052946, 0, -0.998597, 0, 1, 0, 0.998597, 0, 0.052946, 23.2803, -0.00836722, 12.4097)
mesh = ExtResource("8_j2kck")
skeleton = NodePath("../../..")

[node name="7" type="MeshInstance3D" parent="World/Buildings"]
transform = Transform3D(0.99923, 0, 0.0392248, 0, 1, 0, -0.0392248, 0, 0.99923, 9.51442, -0.00504506, -1.67719)
mesh = ExtResource("9_5gsc5")
skeleton = NodePath("../../..")

[node name="Tree" type="StaticBody3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.426157, -1.90735e-06, -4.33639)
collision_mask = 0

[node name="tree" type="MeshInstance3D" parent="World/Tree"]
transform = Transform3D(-8.74228e-09, 0, -0.2, 0, 0.2, 0, 0.2, 0, -8.74228e-09, 0.149554, 0.00410983, -0.103335)
mesh = ExtResource("3_ssptq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Tree"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00293496, 0.211306, 0)
shape = SubResource("12")

[node name="Tree" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(0.505642, 0, -0.862743, 0, 1, 0, 0.862743, 0, 0.505642, -7.62897, -1.90735e-06, -1.77396)

[node name="Tree2" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(-0.649196, 0, -0.760621, 0, 1, 0, 0.760621, 0, -0.649196, -6.24994, -1.90735e-06, -0.338877)

[node name="Tree3" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(-0.47115, 0, 0.882053, 0, 1, 0, -0.882053, 0, -0.47115, -7.13697, -1.90735e-06, 1.32183)

[node name="Tree4" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(-0.798268, 0, -0.602303, 0, 1, 0, 0.602303, 0, -0.798268, -5.97472, -1.90735e-06, 3.0062)

[node name="Tree5" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(0.229761, 0, 0.973247, 0, 1, 0, -0.973247, 0, 0.229761, -5.97472, -1.90735e-06, 1.74496)

[node name="Tree6" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(0.229761, 0, 0.973247, 0, 1, 0, -0.973247, 0, 0.229761, -5.97472, -1.90735e-06, 4.83953)

[node name="Tree19" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(0.229761, 0, 0.973247, 0, 1, 0, -0.973247, 0, 0.229761, -6.96571, -1.90735e-06, 6.01299)

[node name="Tree7" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(-0.278488, 0, -0.96044, 0, 1, 0, 0.96044, 0, -0.278488, -3.40775, -1.90735e-06, -8.0364)

[node name="Tree8" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(-0.998652, 0, -0.0519001, 0, 1, 0, 0.0519001, 0, -0.998652, -3.50099, -1.90735e-06, -6.04831)

[node name="Tree9" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(0.316229, 0, 0.948683, 0, 1, 0, -0.948683, 0, 0.316229, -5.3166, -1.90735e-06, -5.54998)

[node name="Tree10" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(-0.98626, 0, 0.165203, 0, 1, 0, -0.165203, 0, -0.98626, -5.7399, -1.90735e-06, -3.54779)

[node name="Tree11" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(0.864512, 0, 0.502612, 0, 1, 0, -0.502612, 0, 0.864512, -4.82436, -1.90735e-06, -4.41527)

[node name="Tree12" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(0.864512, 0, 0.502612, 0, 1, 0, -0.502612, 0, 0.864512, -7.07072, -1.90735e-06, -2.28683)

[node name="Tree13" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(-0.721458, 0, -0.692458, 0, 1, 0, 0.692458, 0, -0.721458, 1.36429, -1.90735e-06, -9.46866)

[node name="Tree14" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(-0.890769, 0, 0.454457, 0, 1, 0, -0.454457, 0, -0.890769, 0.289355, -1.90735e-06, -7.79363)

[node name="Tree15" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(0.748261, 0, 0.663404, 0, 1, 0, -0.663404, 0, 0.748261, -1.53213, -1.90735e-06, -8.27003)

[node name="Tree16" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(-0.771469, 0, 0.636267, 0, 1, 0, -0.636267, 0, -0.771469, -2.89995, -1.90735e-06, -6.74785)

[node name="Tree17" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(0.999996, 0, 0.00293195, 0, 1, 0, -0.00293195, 0, 0.999996, -1.6733, -1.90735e-06, -7.04123)

[node name="Tree18" parent="World/Tree" instance=ExtResource("7")]
transform = Transform3D(0.999996, 0, 0.00293195, 0, 1, 0, -0.00293195, 0, 0.999996, -4.68299, -1.90735e-06, -6.32139)

[node name="Plane" type="StaticBody3D" parent="World"]
collision_mask = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Plane"]
transform = Transform3D(20, 0, 0, 0, -1.74846e-06, 1, 0, -40, -4.37114e-08, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_ls3po")
mesh = SubResource("6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Plane"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.933422, 0)
shape = SubResource("8")

[connection signal="input_event" from="Play Button" to="." method="_on_play_input_event"]
[connection signal="mouse_entered" from="Play Button" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="Play Button" to="." method="_on_play_mouse_exited"]
[connection signal="input_event" from="Quit Button" to="." method="_on_quit_input_event"]
[connection signal="mouse_entered" from="Quit Button" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="Quit Button" to="." method="_on_quit_mouse_exited"]
